Decouple configs